--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -151,7 +151,7 @@ jobs:
 
       # #8073 test
       - name: Run Tests (PRETTIER_FALLBACK_RESOLVE)
-        run: yarn test "tests/integration/__tests__/(config|plugin)"
+        run: yarn test:dist:integration "tests/integration/__tests__/(config|plugin)"
         env:
           NODE_ENV: production
           PRETTIER_FALLBACK_RESOLVE: true
