--- a/package.json
+++ b/package.json
@@ -145,7 +145,8 @@
     "prepare-release": "yarn && yarn build && yarn test:dist",
     "test:integration": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest-integration-test.config.mjs",
     "test:format": "jest --config=jest-format-test.config.mjs",
-    "test:dev-package": "cross-env INSTALL_PACKAGE=1 yarn test",
+    "test:dev-package:integration": "cross-env INSTALL_PACKAGE=1 yarn test:integration",
+    "test:dev-package:format": "cross-env INSTALL_PACKAGE=1 yarn test:format",
     "test:dist:lint": "eslint --no-eslintrc --no-ignore --no-inline-config --config=./scripts/bundle-eslint-config.js \"dist/!(bin-prettier|index|third-party).js\"",
     "test:dist:integration": "cross-env NODE_ENV=production yarn test:integration",
     "test:dist:format": "cross-env NODE_ENV=production yarn test:format",
