--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Run Format Tests (Linux and Windows)
         if: ${{ matrix.os != 'macos-latest' }}
-        run: yarn test:format --maxWorkers=2
+        run: yarn c8 test:format --maxWorkers=2
 
       - name: Upload Coverage
         uses: codecov/codecov-action@v2.1.0
