--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Run Format Tests (Linux and Windows)
         if: ${{ matrix.os != 'macos-latest' }}
-        run: yarn c8 test:format --maxWorkers=2
+        run: yarn c8 yarn test:format --maxWorkers=2
 
       - name: Upload Coverage
         uses: codecov/codecov-action@v2.1.0
@@ -86,7 +86,7 @@ jobs:
 
       # #8073 test
       - name: Run Tests (PRETTIER_FALLBACK_RESOLVE)
-        run: yarn test:integration "tests/integration/__tests__/(config|plugin)"
+        run: yarn c8 yarn test:integration "tests/integration/__tests__/(config|plugin)"
         env:
           PRETTIER_FALLBACK_RESOLVE: true
 
