--- a/package.json
+++ b/package.json
@@ -169,6 +169,12 @@
     "build": "node --max-old-space-size=4096 ./scripts/build/build.mjs",
     "build:website": "node ./scripts/build-website.mjs"
   },
+  "c8": {
+    "reporter": [
+      "lcov",
+      "text"
+    ]
+  },
   "browserslist": [
     ">0.5%",
     "not ie 11",
