--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,11 +24,14 @@
     "src/main/options.js",
     "src/cli/index.js",
     "src/cli/expand-patterns.js",
-    "src/cli/core.js",
+    "src/cli/file-info.js",
+    "src/cli/find-config-path.js",
     "src/cli/context.js",
     "src/cli/format.js",
-    "src/cli/option-map.js",
-    "src/cli/option.js",
+    "src/cli/options/get-context-options.js",
+    "src/cli/options/get-options-for-file.js",
+    "src/cli/options/option-map.js",
+    "src/cli/options/parse-cli-arguments.js",
     "src/cli/usage.js",
     "src/cli/constant.js",
     "src/cli/prettier-internal.js",
