--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/compiler": "12.2.15",
     "@babel/code-frame": "7.16.7",
     "@babel/parser": "7.16.7",
-    "@glimmer/syntax": "0.83.1",
+    "@glimmer/syntax": "npm:@j-f/glimmer-syntax@0.0.1",
     "@iarna/toml": "2.2.5",
     "@typescript-eslint/typescript-estree": "5.8.1",
     "angular-estree-parser": "2.5.0",
