--- a/package.json
+++ b/package.json
@@ -91,11 +91,11 @@
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
-    "@babel/jest-light-runner": "file:./tests/config/jest-light-runner",
     "@babel/preset-env": "7.16.7",
     "@babel/types": "7.16.7",
     "@glimmer/reference": "0.83.1",
     "@jest/globals": "27.4.2",
+    "@prettier/jest-light-runner": "file:./tests/config/jest-light-runner",
     "@rollup/plugin-alias": "3.1.9",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "21.0.1",
@@ -122,8 +122,8 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-regexp": "1.5.1",
     "eslint-plugin-unicorn": "40.0.0",
-    "execa": "6.0.0",
     "esm-utils": "2.0.1",
+    "execa": "6.0.0",
     "jest": "27.4.5",
     "jest-snapshot-serializer-ansi": "1.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
