Bundle with esbuild

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@babel/core": "7.16.7",
     "@babel/preset-env": "7.16.7",
     "@babel/types": "7.16.7",
+    "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.83.1",
     "@jest/globals": "27.4.2",
     "@prettier/jest-light-runner": "file:./tests/config/jest-light-runner",
@@ -112,6 +113,8 @@
     "cross-env": "7.0.3",
     "cspell": "5.14.0",
     "enquirer": "2.3.6",
+    "esbuild": "0.14.10",
+    "esbuild-plugin-babel": "0.2.3",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-formatter-friendly": "7.0.0",
