--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "enquirer": "2.3.6",
     "esbuild": "0.14.10",
     "esbuild-plugin-babel": "0.2.3",
+    "esbuild-plugin-text-replace": "1.1.3",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-formatter-friendly": "7.0.0",
