--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "babel-jest": "27.4.5",
     "babel-loader": "8.2.3",
     "benchmark": "2.1.4",
+    "browserslist": "4.19.1",
     "builtin-modules": "3.2.0",
     "core-js": "3.20.2",
     "cross-env": "7.0.3",
@@ -116,6 +117,7 @@
     "enquirer": "2.3.6",
     "esbuild": "0.14.10",
     "esbuild-plugin-babel": "0.2.3",
+    "esbuild-plugin-browserslist": "0.4.1",
     "esbuild-plugin-text-replace": "1.1.3",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
