--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "7.16.7",
     "@babel/preset-env": "7.16.7",
     "@babel/preset-react": "7.16.5",
     "@sandhose/prettier-animated-logo": "1.0.3",
