--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/parser": "7.16.7",
     "@glimmer/syntax": "0.83.1",
     "@iarna/toml": "2.2.5",
-    "@typescript-eslint/typescript-estree": "5.9.0",
+    "@typescript-eslint/typescript-estree": "5.8.1",
     "angular-estree-parser": "2.5.0",
     "angular-html-parser": "1.8.0",
     "camelcase": "6.3.0",
@@ -41,10 +41,10 @@
     "escape-string-regexp": "4.0.0",
     "espree": "9.3.0",
     "esutils": "2.0.3",
-    "fast-glob": "3.2.9",
+    "fast-glob": "3.2.7",
     "fast-json-stable-stringify": "2.1.0",
     "find-parent-dir": "0.3.1",
-    "flow-parser": "0.169.0",
+    "flow-parser": "0.168.0",
     "get-stdin": "8.0.0",
     "globby": "11.0.4",
     "graphql": "15.6.1",
@@ -76,7 +76,7 @@
     "remark-footnotes": "2.0.0",
     "remark-math": "3.0.1",
     "remark-parse": "8.0.3",
-    "resolve": "1.21.0",
+    "resolve": "1.20.0",
     "semver": "7.3.5",
     "string-width": "4.2.3",
     "strip-ansi": "6.0.0",
@@ -88,31 +88,24 @@
     "yaml-unist-parser": "1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.16.7",
-    "@babel/preset-env": "7.16.7",
-    "@babel/types": "7.16.7",
+    "@esbuild-plugins/node-globals-polyfill": "0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.83.1",
-    "@rollup/plugin-alias": "3.1.9",
-    "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "21.0.1",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "@rollup/plugin-replace": "3.0.1",
     "@types/estree": "0.0.50",
     "@types/jest": "27.4.0",
-    "babel-jest": "27.4.6",
-    "@typescript-eslint/eslint-plugin": "5.9.0",
-    "babel-loader": "8.2.3",
     "benchmark": "2.1.4",
+    "browserslist": "4.19.1",
     "builtin-modules": "3.2.0",
-    "core-js": "3.20.2",
     "cross-env": "7.0.3",
-    "cspell": "5.15.1",
+    "cspell": "5.14.0",
     "enquirer": "2.3.6",
+    "esbuild": "0.14.10",
+    "esbuild-plugin-browserslist": "0.4.1",
+    "esbuild-plugin-text-replace": "1.1.3",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-formatter-friendly": "7.0.0",
-    "eslint-plugin-compat": "4.0.1",
+    "eslint-plugin-compat": "4.0.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jest": "25.3.4",
     "eslint-plugin-prettier-internal-rules": "2.0.1",
@@ -121,7 +114,7 @@
     "eslint-plugin-unicorn": "40.0.0",
     "esm-utils": "2.0.1",
     "execa": "5.1.1",
-    "jest": "27.4.7",
+    "jest": "27.4.5",
     "jest-snapshot-serializer-ansi": "1.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-watch-typeahead": "1.0.0",
@@ -132,14 +125,9 @@
     "prettier": "2.5.1",
     "pretty-bytes": "5.6.0",
     "rimraf": "3.0.2",
-    "rollup": "2.63.0",
-    "rollup-plugin-polyfill-node": "0.8.0",
-    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-license": "2.2.0",
     "snapshot-diff": "0.9.0",
-    "string-replace-loader": "3.1.0",
-    "tempy": "1.0.1",
-    "terser-webpack-plugin": "5.3.0",
-    "webpack": "5.49.0"
+    "tempy": "1.0.1"
   },
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
@@ -163,7 +151,7 @@
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
-    "build": "node --max-old-space-size=4096 ./scripts/build/build.mjs",
+    "build": "node ./scripts/build/build.mjs",
     "build:website": "node ./scripts/build-website.mjs"
   },
   "browserslist": [
