--- a/website/package.json
+++ b/website/package.json
@@ -9,15 +9,17 @@
     "clipboard": "2.0.8",
     "codemirror-graphql": "1.2.11",
     "lz-string": "1.4.4",
-    "prop-types": "15.8.1",
+    "prop-types": "15.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@babel/preset-react": "7.16.7",
+    "@babel/core": "7.16.7",
+    "@babel/preset-env": "7.16.7",
+    "@babel/preset-react": "7.16.5",
     "@sandhose/prettier-animated-logo": "1.0.3",
     "babel-loader": "8.2.3",
-    "concurrently": "7.0.0",
+    "concurrently": "6.5.1",
     "docusaurus": "1.14.7",
     "js-yaml": "4.1.0",
     "webpack": "5.65.0",
