Build: Switch to `esbuild` (#12052)

--- a/package.json
+++ b/package.json
@@ -90,28 +90,22 @@
     "yaml-unist-parser": "1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.16.7",
-    "@babel/preset-env": "7.16.7",
-    "@babel/types": "7.16.7",
+    "@esbuild-plugins/node-globals-polyfill": "0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.83.1",
     "@jest/globals": "27.4.2",
     "@prettier/jest-light-runner": "file:./tests/config/jest-light-runner",
-    "@rollup/plugin-alias": "3.1.9",
-    "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "21.0.1",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.1.2",
-    "@rollup/plugin-replace": "3.0.1",
     "@types/estree": "0.0.50",
     "@types/jest": "27.4.0",
-    "babel-jest": "27.4.5",
-    "babel-loader": "8.2.3",
     "benchmark": "2.1.4",
+    "browserslist": "4.19.1",
     "builtin-modules": "3.2.0",
-    "core-js": "3.20.2",
     "cross-env": "7.0.3",
     "cspell": "5.14.0",
     "enquirer": "2.3.6",
+    "esbuild": "0.14.10",
+    "esbuild-plugin-browserslist": "0.4.1",
+    "esbuild-plugin-text-replace": "1.1.3",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-formatter-friendly": "7.0.0",
@@ -135,10 +129,7 @@
     "prettier": "2.5.1",
     "pretty-bytes": "5.6.0",
     "rimraf": "3.0.2",
-    "rollup": "2.62.0",
     "rollup-plugin-license": "2.2.0",
-    "rollup-plugin-polyfill-node": "0.8.0",
-    "rollup-plugin-terser": "7.0.2",
     "snapshot-diff": "0.9.0",
     "tempy": "2.0.0"
   },
@@ -166,7 +157,7 @@
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
-    "build": "node --max-old-space-size=4096 ./scripts/build/build.mjs",
+    "build": "node ./scripts/build/build.mjs",
     "build:website": "node ./scripts/build-website.mjs"
   },
   "c8": {
