--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "yaml-unist-parser": "1.3.1"
   },
   "devDependencies": {
+    "@babel/core": "7.16.7",
+    "@babel/preset-env": "7.16.7",
     "@esbuild-plugins/node-globals-polyfill": "0.1.1",
     "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.83.1",
