--- a/package.json
+++ b/package.json
@@ -98,10 +98,12 @@
     "benchmark": "2.1.4",
     "browserslist": "4.19.1",
     "builtin-modules": "3.2.0",
+    "core-js": "3.20.2",
     "cross-env": "7.0.3",
     "cspell": "5.14.0",
     "enquirer": "2.3.6",
     "esbuild": "0.14.10",
+    "esbuild-plugin-babel": "0.2.3",
     "esbuild-plugin-browserslist": "0.4.1",
     "esbuild-plugin-text-replace": "1.1.3",
     "eslint": "8.6.0",
