--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@types/estree": "0.0.50",
     "@types/jest": "27.4.0",
     "babel-jest": "27.4.6",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
     "babel-loader": "8.2.3",
     "benchmark": "2.1.4",
     "builtin-modules": "3.2.0",
