--- a/package.json
+++ b/package.json
@@ -90,11 +90,15 @@
   "devDependencies": {
     "@babel/core": "7.16.7",
     "@babel/preset-env": "7.16.7",
+    "@babel/types": "7.16.7",
     "@esbuild-plugins/node-globals-polyfill": "0.1.1",
     "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.83.1",
     "@types/estree": "0.0.50",
     "@types/jest": "27.4.0",
+    "babel-jest": "27.4.6",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "babel-loader": "8.2.3",
     "benchmark": "2.1.4",
     "browserslist": "4.19.1",
     "builtin-modules": "3.2.0",
@@ -109,7 +113,7 @@
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-formatter-friendly": "7.0.0",
-    "eslint-plugin-compat": "4.0.0",
+    "eslint-plugin-compat": "4.0.1",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jest": "25.3.4",
     "eslint-plugin-prettier-internal-rules": "2.0.1",
