--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -35,7 +35,7 @@ jobs:
       # This step calls `git reset`
       # It should be the last step
       - name: Check Sizes
-        # if: ${{ github.event_name == 'pull_request' && startsWith(github.head_ref, 'dependabot/npm_and_yarn/') }}
+        if: ${{ github.event_name == 'pull_request' && startsWith(github.head_ref, 'dependabot/npm_and_yarn/') }}
         uses: preactjs/compressed-size-action@2.3.0
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
