Bring back `yarn test` script

--- a/package.json
+++ b/package.json
@@ -136,8 +136,9 @@
   },
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
-    "test:integration": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest-integration-test.config.mjs",
-    "test:format": "jest --config=jest-format-test.config.mjs",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:integration": "yarn test --config=jest-integration-test.config.mjs",
+    "test:format": "yarn test --config=jest-format-test.config.mjs",
     "test:dev-package:integration": "cross-env INSTALL_PACKAGE=1 yarn test:integration",
     "test:dev-package:format": "cross-env INSTALL_PACKAGE=1 yarn test:format",
     "test:dist:lint": "eslint --no-eslintrc --no-ignore --no-inline-config --config=./scripts/bundle-eslint-config.js \"dist/!(bin-prettier|index|third-party).js\"",
