--- a/package.json
+++ b/package.json
@@ -139,8 +139,8 @@
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "test:integration": "yarn test --config=jest-integration-test.config.mjs",
     "test:format": "yarn test --config=jest-format-test.config.mjs",
-    "test:dev-package:integration": "cross-env INSTALL_PACKAGE=1 yarn test:integration",
-    "test:dev-package:format": "cross-env INSTALL_PACKAGE=1 yarn test:format",
+    "test:dev-package": "cross-env INSTALL_PACKAGE=1 yarn test",
+    "test:dist": "cross-env NODE_ENV=production yarn test",
     "test:dist:lint": "eslint --no-eslintrc --no-ignore --no-inline-config --config=./scripts/bundle-eslint-config.js \"dist/!(bin-prettier|index|third-party).js\"",
     "test:dist:integration": "cross-env NODE_ENV=production yarn test:integration",
     "test:dist:format": "cross-env NODE_ENV=production yarn test:format",
