--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -113,21 +113,13 @@ jobs:
           name: dist
           path: dist
 
-      - name: Run Integration Tests (macOS)
+      - name: Run Tests (macOS)
         if: ${{ matrix.os == 'macos-latest' }}
-        run: yarn test:dist:integration --maxWorkers=4
+        run: yarn test:dist --maxWorkers=4
 
-      - name: Run Integration Tests (Linux and Windows)
+      - name: Run Tests (Linux and Windows)
         if: ${{ matrix.os != 'macos-latest' }}
-        run: yarn test:dist:integration --maxWorkers=2
-
-      - name: Run Format Tests (macOS)
-        if: ${{ matrix.os == 'macos-latest' }}
-        run: yarn test:dist:format --maxWorkers=4
-
-      - name: Run Format Tests (Linux and Windows)
-        if: ${{ matrix.os != 'macos-latest' }}
-        run: yarn test:dist:format --maxWorkers=2
+        run: yarn test:dist --maxWorkers=2
 
       - name: Run Format Tests (standalone) (macOS)
         if: ${{ matrix.os == 'macos-latest' }}
