--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -72,7 +72,7 @@ jobs:
 
       # #8073 test
       - name: Run Tests (PRETTIER_FALLBACK_RESOLVE)
-        run: yarn test:integration "tests/integration/__tests__/(config|plugin)"
+        run: yarn test "tests/integration/__tests__/(config|plugin)"
         env:
           PRETTIER_FALLBACK_RESOLVE: true
 
