--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/typescript-estree": "5.9.0",
     "angular-estree-parser": "2.5.0",
     "angular-html-parser": "1.8.0",
+    "c8": "7.10.0",
     "camelcase": "6.3.0",
     "chalk": "4.1.2",
     "ci-info": "3.3.0",
@@ -156,6 +157,12 @@
     "fix:prettier": "yarn lint:prettier --write",
     "build": "node ./scripts/build/build.mjs",
     "build:website": "node ./scripts/build-website.mjs"
+  },
+  "c8": {
+    "reporter": [
+      "lcov",
+      "text"
+    ]
   },
   "browserslist": [
     ">0.5%",
