--- a/package.json
+++ b/package.json
@@ -91,24 +91,24 @@
     "@babel/core": "7.16.7",
     "@babel/preset-env": "7.16.7",
     "@babel/types": "7.16.7",
+    "@esbuild-plugins/node-globals-polyfill": "0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.83.1",
-    "@rollup/plugin-alias": "3.1.9",
-    "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "21.0.1",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "@rollup/plugin-replace": "3.0.1",
     "@types/estree": "0.0.50",
     "@types/jest": "27.4.0",
     "babel-jest": "27.4.6",
     "@typescript-eslint/eslint-plugin": "5.9.0",
     "babel-loader": "8.2.3",
     "benchmark": "2.1.4",
+    "browserslist": "4.19.1",
     "builtin-modules": "3.2.0",
     "core-js": "3.20.2",
     "cross-env": "7.0.3",
     "cspell": "5.15.1",
     "enquirer": "2.3.6",
+    "esbuild": "0.14.10",
+    "esbuild-plugin-browserslist": "0.4.1",
+    "esbuild-plugin-text-replace": "1.1.3",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-formatter-friendly": "7.0.0",
@@ -132,14 +132,9 @@
     "prettier": "2.5.1",
     "pretty-bytes": "5.6.0",
     "rimraf": "3.0.2",
-    "rollup": "2.63.0",
-    "rollup-plugin-polyfill-node": "0.8.0",
-    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-license": "2.2.0",
     "snapshot-diff": "0.9.0",
-    "string-replace-loader": "3.1.0",
-    "tempy": "1.0.1",
-    "terser-webpack-plugin": "5.3.0",
-    "webpack": "5.49.0"
+    "tempy": "1.0.1"
   },
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
@@ -163,7 +158,7 @@
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
-    "build": "node --max-old-space-size=4096 ./scripts/build/build.mjs",
+    "build": "node ./scripts/build/build.mjs",
     "build:website": "node ./scripts/build-website.mjs"
   },
   "browserslist": [
