--- a/package.json
+++ b/package.json
@@ -96,18 +96,17 @@
     "@glimmer/reference": "0.83.1",
     "@types/estree": "0.0.50",
     "@types/jest": "27.4.0",
-    "babel-jest": "27.4.6",
     "@typescript-eslint/eslint-plugin": "5.10.0",
+    "babel-jest": "27.4.6",
     "babel-loader": "8.2.3",
     "benchmark": "2.1.4",
-    "browserslist": "4.19.1",
+    "browserslist-to-esbuild": "1.1.1",
     "builtin-modules": "3.2.0",
     "core-js": "3.20.3",
     "cross-env": "7.0.3",
     "cspell": "5.16.0",
     "enquirer": "2.3.6",
     "esbuild": "0.14.13",
-    "esbuild-plugin-browserslist": "0.4.2",
     "esbuild-plugin-text-replace": "1.1.3",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
