--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "enquirer": "2.3.6",
     "esbuild": "0.14.13",
     "esbuild-plugin-text-replace": "1.1.3",
+    "esbuild-visualizer": "0.3.1",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-formatter-friendly": "7.0.0",
