--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "remark-parse": "8.0.3",
     "resolve": "1.22.0",
     "semver": "7.3.5",
-    "string-width": "4.2.3",
+    "string-width": "5.0.1",
     "strip-ansi": "6.0.0",
     "typescript": "4.5.5",
     "unicode-regex": "3.0.0",
@@ -87,6 +87,9 @@
     "vnopts": "1.0.2",
     "wcwidth": "1.0.1",
     "yaml-unist-parser": "1.3.1"
+  },
+  "imports": {
+    "#string-width": "./vendors/string-width.js"
   },
   "devDependencies": {
     "@babel/core": "7.17.0",
