--- a/package.json
+++ b/package.json
@@ -134,10 +134,12 @@
     "path-browserify": "1.0.1",
     "prettier": "2.5.1",
     "pretty-bytes": "5.6.0",
+    "read-pkg": "7.0.0",
     "rimraf": "3.0.2",
     "rollup-plugin-license": "2.6.1",
     "snapshot-diff": "0.9.0",
-    "tempy": "1.0.1"
+    "tempy": "1.0.1",
+    "write-pkg": "5.0.0"
   },
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
