--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "lines-and-columns": "2.0.3",
     "linguist-languages": "7.15.0",
     "lodash": "4.17.21",
-    "mem": "8.1.1",
+    "mem": "9.0.2",
     "meriyah": "4.2.0",
     "minimatch": "3.0.4",
     "minimist": "1.2.5",
@@ -89,7 +89,8 @@
     "yaml-unist-parser": "1.3.1"
   },
   "imports": {
-    "#string-width": "./vendors/string-width.js"
+    "#string-width": "./vendors/string-width.js",
+    "#mem": "./vendors/mem.js"
   },
   "devDependencies": {
     "@babel/core": "7.17.0",
