--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "prettier": "2.5.1",
     "pretty-bytes": "5.6.0",
     "read-pkg": "7.0.0",
+    "read-pkg-up": "9.0.0",
     "rimraf": "3.0.2",
     "rollup-plugin-license": "2.6.1",
     "snapshot-diff": "0.9.0",
