Replace minimatch with micromatch
Micromatch already used inside fast-glob. It makes more sense to reuse
it. Though its behaviour slightly different I found a way to match
minimatch.

```
du -ck dist
```
before: 17260 kB
after: 17232

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "lodash": "4.17.21",
     "mem": "9.0.2",
     "meriyah": "4.2.0",
-    "minimatch": "3.0.4",
+    "micromatch": "4.0.4",
     "minimist": "1.2.5",
     "n-readlines": "1.0.1",
     "outdent": "0.8.0",
