--- a/package.json
+++ b/package.json
@@ -166,7 +166,9 @@
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
     "build": "node ./scripts/build/build.mjs",
-    "build:website": "node ./scripts/build-website.mjs"
+    "build:website": "node ./scripts/build-website.mjs",
+    "vendors:bundle": "node ./scripts/vendors/bundle-vendors.mjs",
+    "vendors:validate": "node ./scripts/vendors/validate-vendor-versions.mjs"
   },
   "browserslist": [
     ">0.5%",
