Include vendors/ when installing from GitHub

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "index.js",
     "standalone.js",
     "src",
-    "bin"
+    "bin",
+    "vendors"
   ],
   "dependencies": {
     "@angular/compiler": "12.2.16",
