Include vendors/ when installing from GitHub (#12250)

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "index.js",
     "standalone.js",
     "src",
-    "bin"
+    "bin",
+    "vendors"
   ],
   "dependencies": {
     "@angular/compiler": "12.2.16",
@@ -88,10 +89,6 @@
     "wcwidth": "1.0.1",
     "yaml-unist-parser": "1.3.1"
   },
-  "imports": {
-    "#string-width": "./vendors/string-width.js",
-    "#mem": "./vendors/mem.js"
-  },
   "devDependencies": {
     "@babel/core": "7.17.0",
     "@babel/preset-env": "7.16.11",
@@ -135,13 +132,11 @@
     "path-browserify": "1.0.1",
     "prettier": "2.5.1",
     "pretty-bytes": "5.6.0",
-    "read-pkg": "7.0.0",
     "read-pkg-up": "9.0.0",
     "rimraf": "3.0.2",
     "rollup-plugin-license": "2.6.1",
     "snapshot-diff": "0.9.0",
-    "tempy": "1.0.1",
-    "write-pkg": "5.0.0"
+    "tempy": "1.0.1"
   },
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
