Rename to `yarn test:dist-lint`

--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -65,7 +65,7 @@ jobs:
           path: dist
 
       - name: Lint Code
-        run: yarn lint:dist
+        run: yarn test:dist-lint
 
   test:
     timeout-minutes: 90
