--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "benchmark": "2.1.4",
     "browserslist-to-esbuild": "1.1.1",
     "builtin-modules": "3.2.0",
-    "core-js": "3.21.0",
+    "cross-env": "7.0.3",
     "cspell": "5.18.3",
     "enquirer": "2.3.6",
     "esbuild": "0.14.18",
