Run CLI with `--runInBand`

--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -58,11 +58,11 @@ jobs:
 
       - name: Run Integration Tests (macOS)
         if: ${{ matrix.os == 'macos-latest' }}
-        run: yarn test:integration --maxWorkers=4
+        run: yarn test:integration --runInBand
 
       - name: Run Integration Tests (Linux and Windows)
         if: ${{ matrix.os != 'macos-latest' }}
-        run: yarn test:integration --maxWorkers=2
+        run: yarn test:integration --runInBand
 
       - name: Upload Coverage
         uses: codecov/codecov-action@v2.1.0
@@ -72,11 +72,11 @@ jobs:
 
       - name: Run Format Tests (macOS)
         if: ${{ matrix.os == 'macos-latest' }}
-        run: yarn test:format --maxWorkers=4
+        run: yarn test:format --runInBand
 
       - name: Run Format Tests (Linux and Windows)
         if: ${{ matrix.os != 'macos-latest' }}
-        run: yarn c8 yarn test:format --maxWorkers=2
+        run: yarn c8 yarn test:format --runInBand
 
       - name: Upload Coverage
         uses: codecov/codecov-action@v2.1.0
