--- a/src/cli/package.json
+++ b/src/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "module",
   "//TODO": "Remove this file when we close #10157",
-  "//description": "A package.json file to use `.js` files in this directory as ES module."
+  "type": "module",
+  "description": "A package.json file to use `.js` files in this directory as ES module."
 }
