Add `type: "module"` to `package.json`

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "funding": "https://github.com/prettier/prettier?sponsor=1",
   "homepage": "https://prettier.io",
   "author": "James Long",
+  "type": "module",
   "license": "MIT",
   "main": "./index.js",
   "browser": "./standalone.js",
