--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
-    "target": "es2015",
-    "module": "commonjs",
+    "target": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     // TBD it is desired to enabled strict type checking at some point:
