--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -157,7 +157,6 @@ jobs:
         uses: actions/setup-node@v2.5.1
         with:
           node-version: "0.10.48"
-          cache: "yarn"
 
       - name: Download Artifact
         uses: actions/download-artifact@v2
@@ -169,4 +168,4 @@ jobs:
         run: node -v | grep "v0.10.48" || exit 1
 
       - name: Run CLI on Node.js v0.10.48
-        run: node dist/bin-prettier --version>&1 >/dev/null | grep "prettier requires at least version 10.13.0 of Node, please upgrade" || exit 1
+        run: node dist/bin-prettier --version 2>&1 >/dev/null | grep "prettier requires at least version 10.13.0 of Node, please upgrade" || exit 1
