--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "leven": "3.1.0",
     "lines-and-columns": "2.0.3",
     "linguist-languages": "7.15.0",
-    "lodash": "4.17.21",
+    "lodash-es": "4.17.21",
     "mem": "9.0.2",
     "meriyah": "4.2.0",
     "micromatch": "4.0.4",
