--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ci-info": "3.3.0",
     "cjk-regex": "2.0.1",
     "cosmiconfig": "7.0.1",
+    "css-units-list": "0.0.4",
     "dashify": "2.0.0",
     "diff": "5.0.0",
     "editorconfig": "0.15.3",
@@ -119,8 +120,8 @@
     "eslint-plugin-regexp": "1.5.1",
     "eslint-plugin-unicorn": "41.0.0",
     "esm-utils": "3.0.0",
-    "jest": "27.5.1",
     "execa": "6.1.0",
+    "jest": "27.5.1",
     "jest-snapshot-serializer-ansi": "1.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-watch-typeahead": "1.0.0",
