--- a/.github/workflows/validate-vendors.yml
+++ b/.github/workflows/validate-vendors.yml
@@ -1,4 +1,4 @@
-name: Validate_Vendor_Versions
+name: Validate_Vendors
 
 on:
   push:
@@ -28,5 +28,5 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Validate Vendor Versions
-        run: yarn run vendors:validate
+      - name: Validate Vendors
+        run: yarn run vendors:bundle && echo "Listing changed files:" && git diff --name-only --exit-code && echo "No files changed."
