CI: Use `node-version` instead of deprecated `version`

--- a/.github/workflows/validate-vendor-versions.yml
+++ b/.github/workflows/validate-vendor-versions.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          version: "14"
+          node-version: "14"
           cache: "yarn"
 
       - name: Install Dependencies
