--- a/.github/workflows/release-script-test.yml
+++ b/.github/workflows/release-script-test.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          version: "14"
+          node-version: "14"
           cache: "yarn"
 
       - name: Install Dependencies
