--- a/website/data/languages.yml
+++ b/website/data/languages.yml
@@ -44,6 +44,7 @@
   image: /images/languages/tools_wip.svg
   variants:
     - "[Apex](https://github.com/dangmai/prettier-plugin-apex)"
+    - "[C#](https://github.com/belav/csharpier/) (CSharpier is a standalone tool based on a port of Prettier)"
     - "[Elm](https://github.com/gicentre/prettier-plugin-elm) (via [`elm-format`](https://github.com/avh4/elm-format))"
     - "[Java](https://github.com/jhipster/prettier-java)"
     - "[PHP](https://github.com/prettier/plugin-php)"
