Added an and more section

--- a/website/data/languages.yml
+++ b/website/data/languages.yml
@@ -51,3 +51,4 @@
     - "[Ruby](https://github.com/prettier/plugin-ruby)"
     - "[TOML](https://github.com/bd82/toml-tools/tree/master/packages/prettier-plugin-toml)"
     - "[XML](https://github.com/prettier/plugin-xml)"
+    - "[And more...](https://prettier.io/docs/en/plugins.html#community-plugins)"
