Update the Link for Javascript

--- a/website/data/languages.yml
+++ b/website/data/languages.yml
@@ -1,4 +1,5 @@
 - name: JavaScript
+  nameLink: https://www.javascript.com/
   showName: true
   image: /images/languages/tools_js.svg
   variants:
@@ -28,6 +29,7 @@
   variants:
     - "[GraphQL Schemas](https://graphql.org/learn/schema/)"
 - name: Markdown
+  nameLink: "https://www.markdownguide.org/getting-started/"
   showName: true
   image: /images/languages/tools_md.svg
   variants:
