--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -43,10 +43,9 @@
   greyImage: /images/users/used_by_storybook.svg
   infoLink: https://storybook.js.org/
   pinned: true
-- caption: ZEIT
-  image: /images/users/zeit-200x100.png
-  greyImage: /images/users/used_by_zeit.svg
-  infoLink: https://zeit.co
+- caption: Vercel
+  image: /images/users/vercel-logotype-dark.svg
+  infoLink: https://vercel.com/
 - caption: Spotify
   image: /images/users/used_by_spotify.svg
   infoLink: https://spotify.github.io
