--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-/.cache
+# node_modules
+# We have `node_modules` directory for tests, don't ignore them all
 /node_modules
+/website/node_modules
 /scripts/release/node_modules
+/scripts/tools/bundle-prettier-with-webpack-test/node_modules
+/scripts/tools/eslint-plugin-prettier-internal-rules/node_modules
+
+.tmp
 *.log
 /errors
 /test*.*
 /.vscode
 /dist
-/website/node_modules
 /website/build
 /website/i18n
 /website/static/playground.js
@@ -22,5 +27,4 @@ package-lock.json
 !.yarn/versions
 .pnp.*
 .nyc_output
-/scripts/tools/eslint-plugin-prettier-internal-rules/node_modules
 .devcontainer
