--- a/.github/workflows/eslint-rules.yml
+++ b/.github/workflows/eslint-rules.yml
@@ -4,10 +4,12 @@ on:
   push:
     paths:
       - "scripts/tools/eslint-plugin-prettier-internal-rules/**"
+      # This workflow file
       - ".github/workflows/eslint-rules.yml"
   pull_request:
     paths:
       - "scripts/tools/eslint-plugin-prettier-internal-rules/**"
+      # This workflow file
       - ".github/workflows/eslint-rules.yml"
 
 jobs:
