--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prettier",
-  "version": "2.6.1",
+  "version": "2.7.0-dev",
   "description": "Prettier is an opinionated code formatter",
   "bin": "./bin/prettier.js",
   "repository": "prettier/prettier",
@@ -128,7 +128,7 @@
     "node-fetch": "3.2.3",
     "npm-run-all": "4.1.5",
     "path-browserify": "1.0.1",
-    "prettier": "2.6.0",
+    "prettier": "2.6.1",
     "pretty-bytes": "5.6.0",
     "rimraf": "3.0.2",
     "rollup-plugin-license": "2.6.1",
