--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ package-lock.json
 .pnp.*
 .nyc_output
 .devcontainer
+
+# Temporarily ignore these files to avoid conflicts between next and main branch
+/vendors
+/scripts/vendors
