--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "string-width": "5.0.1",
     "strip-ansi": "7.0.1",
     "typescript": "4.6.3",
+    "unicode-regex": "3.0.0",
     "unified": "9.2.1",
     "vnopts": "1.0.2",
     "yaml-unist-parser": "1.3.1"
