--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "unicode-regex": "3.0.0",
     "unified": "9.2.1",
     "vnopts": "1.0.2",
+    "wcwidth": "1.0.1",
     "yaml-unist-parser": "1.3.1"
   },
   "devDependencies": {
