--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -77,13 +77,13 @@ jobs:
           - "macos-latest"
           - "windows-latest"
         node:
-          - "16.10.0"
+          - "16"
           - "14"
           - "12"
           - "10"
         include:
           - os: "ubuntu-latest"
-            node: "16.10.0"
+            node: "16"
             FULL_TEST: true
         exclude:
           - os: "macos-latest"
@@ -109,8 +109,8 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: "yarn"
 
-      - name: Config `ignore-engines=true` (Node.js 10)
-        if: ${{ matrix.node == '10' }}
+      - name: Config `ignore-engines=true` (Node.js < 14)
+        if: ${{ matrix.node == '10' || matrix.node == '12' }}
         run: yarn config set ignore-engines true
 
       - name: Install Dependencies
