Use published `jest-light-runner` (#12592)

--- a/package.json
+++ b/package.json
@@ -99,7 +99,6 @@
     "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.84.1",
     "@jest/globals": "27.4.2",
-    "@prettier/jest-light-runner": "file:./tests/config/jest-light-runner",
     "@types/estree": "0.0.51",
     "@types/jest": "27.4.1",
     "@typescript-eslint/eslint-plugin": "5.17.0",
@@ -124,6 +123,7 @@
     "esm-utils": "3.0.0",
     "execa": "6.1.0",
     "jest": "27.5.1",
+    "jest-light-runner": "nicolo-ribaudo/jest-light-runner#1c31422",
     "jest-snapshot-serializer-ansi": "1.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-watch-typeahead": "1.0.0",
