--- a/.github/workflows/bundler-friendly.yml
+++ b/.github/workflows/bundler-friendly.yml
@@ -24,7 +24,7 @@ jobs:
           cache: "yarn"
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Build Package
         run: yarn build
@@ -56,7 +56,7 @@ jobs:
           path: dist
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Test
         run: yarn test
