--- a/.github/workflows/validate-vendors.yml
+++ b/.github/workflows/validate-vendors.yml
@@ -28,4 +28,6 @@ jobs:
         run: yarn install --immutable
 
       - name: Validate Vendors
-        run: yarn run vendors:bundle && echo "Listing changed files:" && git diff --name-only --exit-code && echo "No files changed."
+        run: |
+          yarn run vendors:bundle
+          git diff --exit-code
