--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "esm-utils": "3.0.0",
     "execa": "6.1.0",
     "jest": "27.5.1",
-    "jest-light-runner": "nicolo-ribaudo/jest-light-runner#1c31422",
+    "jest-light-runner": "0.1.1",
     "jest-snapshot-serializer-ansi": "1.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-watch-typeahead": "1.0.0",
